[gd_scene load_steps=11 format=3 uid="uid://cgyd2jaxvvb13"]

[ext_resource type="Script" path="res://Scripts/in_hand_napló.gd" id="1_2t8vg"]
[ext_resource type="Texture2D" uid="uid://bkotjjb6rtnw2" path="res://Sprites/naplóopen.png.png" id="2_w8m3n"]
[ext_resource type="Texture2D" uid="uid://dblh3etlm63hc" path="res://Sprites/napló/12.png" id="3_uarg3"]
[ext_resource type="Texture2D" uid="uid://di3px038x5b82" path="res://Sprites/napló/34.png" id="4_ap8gs"]
[ext_resource type="Texture2D" uid="uid://w1bsfrf5q2dx" path="res://Sprites/napló/56.png" id="5_oia3t"]
[ext_resource type="PackedScene" uid="uid://2c4hm7upjlu8" path="res://Scenes/invisibutton.tscn" id="6_57kwm"]
[ext_resource type="Texture2D" uid="uid://bscy7n7f0wpap" path="res://Sprites/napló/ide.png" id="6_rc7nn"]
[ext_resource type="Texture2D" uid="uid://bavgiecnfe32j" path="res://Sprites/napló/oda.png" id="8_65gjp"]
[ext_resource type="Texture2D" uid="uid://dk4s8dfr1svy8" path="res://Sprites/napló/x.png" id="9_8h3uk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ihd0h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_uarg3")
}],
"loop": true,
"name": &"page1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ap8gs")
}],
"loop": true,
"name": &"page2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_oia3t")
}],
"loop": true,
"name": &"page3",
"speed": 5.0
}]

[node name="InHandNapló" type="Node2D"]
script = ExtResource("1_2t8vg")

[node name="InHandNapló" type="Sprite2D" parent="."]
z_index = 8
position = Vector2(-2.38419e-07, 0)
scale = Vector2(1.54, 1.54)
texture = ExtResource("2_w8m3n")

[node name="Pages" type="AnimatedSprite2D" parent="InHandNapló"]
sprite_frames = SubResource("SpriteFrames_ihd0h")
animation = &"page1"

[node name="Left" type="Sprite2D" parent="InHandNapló"]
position = Vector2(-907, 780)
texture = ExtResource("6_rc7nn")

[node name="LeftButton" parent="InHandNapló/Left" instance=ExtResource("6_57kwm")]
offset_left = -78.7143
offset_top = -56.6233
offset_right = -70.7143
offset_bottom = -48.6233
scale = Vector2(19.9616, 14.0516)

[node name="Right" type="Sprite2D" parent="InHandNapló"]
position = Vector2(1006.49, 780)
texture = ExtResource("8_65gjp")

[node name="RightButton" parent="InHandNapló/Right" instance=ExtResource("6_57kwm")]
offset_left = -73.3766
offset_top = -53.896
offset_right = -65.3766
offset_bottom = -45.896
scale = Vector2(18.4775, 13.3237)

[node name="Close" type="Sprite2D" parent="InHandNapló"]
position = Vector2(925.974, -871.429)
texture = ExtResource("9_8h3uk")

[node name="CloseButton" parent="InHandNapló/Close" instance=ExtResource("6_57kwm")]
offset_left = -45.4545
offset_top = -40.2598
offset_right = -37.4545
offset_bottom = -32.2598
scale = Vector2(11.604, 10.3673)

[connection signal="mouse_entered" from="InHandNapló/Left/LeftButton" to="." method="_on_left_button_mouse_entered"]
[connection signal="mouse_exited" from="InHandNapló/Left/LeftButton" to="." method="_on_left_button_mouse_exited"]
[connection signal="pressed" from="InHandNapló/Left/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="mouse_entered" from="InHandNapló/Right/RightButton" to="." method="_on_right_button_mouse_entered"]
[connection signal="mouse_exited" from="InHandNapló/Right/RightButton" to="." method="_on_right_button_mouse_exited"]
[connection signal="pressed" from="InHandNapló/Right/RightButton" to="." method="_on_right_button_pressed"]
[connection signal="mouse_entered" from="InHandNapló/Close/CloseButton" to="." method="_on_close_button_mouse_entered"]
[connection signal="mouse_exited" from="InHandNapló/Close/CloseButton" to="." method="_on_close_button_mouse_exited"]
[connection signal="pressed" from="InHandNapló/Close/CloseButton" to="." method="_on_close_button_pressed"]
